--- a/ship/src/main/res/layout/activity_ship.xml
+++ b/ship/src/main/res/layout/activity_ship.xml
@@ -1,29 +1,34 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".ShipActivity">
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:onClick="goToProduct"
-        android:text="Product_Activity"/>
+        android:onClick="insert"
+        android:text="insert"/>
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:onClick="goToCategory"
-        android:text="Category_Activity"/>
+        android:onClick="query"
+        android:text="query"/>
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:onClick="goToShip"
-        android:text="Ship_Activity"/>
+        android:onClick="update"
+        android:text="update"/>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="delete"
+        android:text="delete"/>
 
 
 </LinearLayout>
